# HelloCPP

./: .gitignore  CMakeLists.txt  build.gradle.kts  conanfile.py  config.json  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
conan/profiles/: gcc13  gcc14
include/: hello.h
src/: hello.cpp  main.cpp
test/: test_hello.cpp
